# jalod-server

./: Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
src/: app.py
src/jalod_api/: __init__.py
src/models/: item.py
